--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
     "type": "library",
     "require": {
         "php": "^8.1",
-        "php-amqplib/php-amqplib": "^3.4"
+        "php-amqplib/php-amqplib": "^3.4",
+        "illuminate/queue": "^9.0"
     },
     "require-dev": {
         "ext-json": "*",
-        "illuminate/queue": "^9.0",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.7"
     },
