--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,16 @@
     "type": "library",
     "require": {
         "php": "^8.1",
+      "illuminate/queue": "^9.0",
         "php-amqplib/php-amqplib": "^3.4",
-        "illuminate/queue": "^9.0"
+        "illuminate/support": "^9.18"
     },
     "require-dev": {
         "ext-json": "*",
         "phpunit/phpunit": "^9.5",
-        "squizlabs/php_codesniffer": "^3.7"
+        "squizlabs/php_codesniffer": "^3.7",
+        "mockery/mockery": "^1.5.1",
+        "dg/bypass-finals": "dev-master"
     },
     "autoload": {
         "psr-4": {
@@ -20,7 +23,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "iamfarhad\\LaravelRabbitMQ\\Tests\\Unit\\": "tests/Unit"
+            "iamfarhad\\LaravelRabbitMQ\\Tests\\": "tests/"
         }
     },
     "extra": {
