--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require-dev": {
         "ext-json": "*",
         "phpunit/phpunit": "^9.5",
+        "orchestra/testbench": "^v7.18.0",
         "squizlabs/php_codesniffer": "^3.7",
         "mockery/mockery": "^1.5.1",
         "dg/bypass-finals": "dev-master"
