--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: true
       matrix:
         php: ['8.1', '8.2']
-        stability: [prefer-stable]
+        stability: [prefer-stable, prefer-dev]
 
     services:
       rabbitmq:
@@ -55,7 +55,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: dom, curl, libxml, mbstring, zip, pcntl
+          extensions: bcmath, curl, dom, mbstring, pcntl, sockets, xml
           coverage: none
           tools: composer:v2
 
