--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: ['8.1', '8.2']
-        stability: [prefer-stable, prefer-dev]
+        php: ['8.1']
+        stability: [prefer-stable]
 
     services:
       rabbitmq:
