--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,9 +10,9 @@ jobs:
   run:
     runs-on: 'ubuntu-latest'
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
-        php: ['8.1']
+        php: ['8.1', '8.2']
         stability: [prefer-stable]
 
     services:
