--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "orchestra/testbench": "^v7.18.0",
         "squizlabs/php_codesniffer": "^3.7",
         "mockery/mockery": "^1.5.1",
-        "dg/bypass-finals": "dev-master"
+        "dg/bypass-finals": "dev-master",
+        "rector/rector": "^0.15.3"
     },
     "autoload": {
         "psr-4": {
