--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
         "squizlabs/php_codesniffer": "^3.7",
         "mockery/mockery": "^1.5.1",
         "dg/bypass-finals": "dev-master",
-        "rector/rector": "^0.15.3"
+        "rector/rector": "^0.15.3",
+        "nunomaduro/larastan": "^2.4.0",
+        "phpstan/phpstan-deprecation-rules": "^1.1.1",
+        "phpstan/phpstan-phpunit": "^1.3.3"
     },
     "autoload": {
         "psr-4": {
