--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" backupGlobals="false" backupStaticAttributes="false"
-         beStrictAboutTestsThatDoNotTestAnything="false" bootstrap="vendor/autoload.php" colors="true"
-         convertErrorsToExceptions="true" convertNoticesToExceptions="true" convertWarningsToExceptions="true"
-         processIsolation="false" stopOnError="false" stopOnFailure="false" verbose="true"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.5/phpunit.xsd">
+<phpunit
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
+        backupGlobals="false"
+        backupStaticAttributes="false"
+        bootstrap="vendor/autoload.php"
+        colors="true"
+        convertErrorsToExceptions="true"
+        convertNoticesToExceptions="true"
+        convertWarningsToExceptions="true"
+        processIsolation="false"
+        stopOnFailure="false"
+        executionOrder="random"
+        failOnWarning="true"
+        failOnRisky="true"
+        failOnEmptyTestSuite="true"
+        beStrictAboutOutputDuringTests="true"
+        verbose="true">
     <coverage>
         <include>
             <directory suffix=".php">src/</directory>
@@ -18,7 +31,7 @@
         </testsuite>
     </testsuites>
     <php>
-        <env name="RABBITMQ_HOST" value="localhost"/>
+        <env name="RABBITMQ_HOST" value="eagle-rmq"/>
         <env name="QUEUE_CONNECTION" value="rabbitmq"/>
         <env name="RABBITMQ_PORT" value="5672"/>
         <env name="PORT_SSL" value="5671"/>
