--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,9 +13,11 @@ jobs:
         php: ['8.1', '8.2']
         os: [ubuntu-latest]
         stability: [prefer-stable]
-        laravel: [9.*]
+        laravel: [9.*, 10.*]
         include:
           - laravel: 9.*
+            testbench: 7.*
+          - laravel: 10.*
             testbench: 7.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
