--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     },
     "require-dev": {
         "ext-json": "*",
-        "phpunit/phpunit": "^9.6",
+        "phpunit/phpunit": "^9.6|^10.0.7",
         "orchestra/testbench": "^v7.18.0",
         "squizlabs/php_codesniffer": "^3",
         "mockery/mockery": "^1.5.1",
