--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "php": "^8.1",
         "illuminate/queue": "^9.0|^10.0",
         "php-amqplib/php-amqplib": "^3.6.0",
-        "illuminate/support": "^9.18|^10.0"
+        "illuminate/support": "^9.18|^10.0",
+        "ext-pcntl": "Required to use all features of the queue consumer."
     },
     "require-dev": {
         "ext-json": "*",
@@ -44,6 +45,5 @@
     ],
     "minimum-stability": "dev",
     "suggest": {
-        "ext-pcntl": "Required to use all features of the queue consumer."
     }
 }
