--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "illuminate/queue": "^9.0|^10.0",
         "php-amqplib/php-amqplib": "^3.6.0",
         "illuminate/support": "^9.18|^10.0",
-        "ext-pcntl": "Required to use all features of the queue consumer."
+        "ext-pcntl": "*"
     },
     "require-dev": {
         "ext-json": "*",
@@ -45,5 +45,6 @@
     ],
     "minimum-stability": "dev",
     "suggest": {
+
     }
 }
