--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,14 +10,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.1', '8.2']
+        php: ['8.1', '8.2','8.3']
         os: [ubuntu-latest]
         stability: [prefer-stable]
-        laravel: [9.*, 10.*]
+        laravel: [9.*, 10.*, 11.*]
         include:
           - laravel: 9.*
             testbench: 7.*
           - laravel: 10.*
+            testbench: 7.*
+          - laravel: 11.*
             testbench: 7.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
