--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,52 +1,43 @@
 name: Tests
-
 on:
   push:
   pull_request:
-
 jobs:
   run:
-    runs-on: 'ubuntu-latest'
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.1', '8.2','8.3']
+        php: ['8.1', '8.2', '8.3']
         os: [ubuntu-latest]
         stability: [prefer-stable]
-        laravel: [9.*, 10.*, 11.*]
+        laravel: [11.*, 12.*]
+        exclude:
+          # Laravel 12 requires PHP >= 8.2
+          - laravel: 12.*
+            php: '8.1'
         include:
-          - laravel: 9.*
-            testbench: 7.*
-          - laravel: 10.*
-            testbench: 7.*
           - laravel: 11.*
-            testbench: 7.*
-
+            testbench: 9.*
+          - laravel: 12.*
+            testbench: 10.*
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@v4
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
           extensions: bcmath, curl, dom, mbstring, pcntl, sockets, xml, intl
           coverage: none
-
       - name: Set up Docker
-        run: |
-          sudo rm /usr/local/bin/docker-compose
-          curl -SL https://github.com/docker/compose/releases/download/v2.15.1/docker-compose-`uname -s`-`uname -m` > docker-compose
-          chmod +x docker-compose
-          sudo mv docker-compose /usr/local/bin
+        uses: docker/setup-buildx-action@v3
       - name: Start Docker container
         run: docker-compose up -d
-
       - name: Install dependencies
         run: |
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
-
       - name: Execute tests
         run: vendor/bin/phpunit
