--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,14 +8,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.1', '8.2', '8.3']
+        php: ['8.2', '8.3']
         os: [ubuntu-latest]
         stability: [prefer-stable]
         laravel: [11.*, 12.*]
-        exclude:
-          # Laravel 12 requires PHP >= 8.2
-          - laravel: 12.*
-            php: '8.1'
         include:
           - laravel: 11.*
             testbench: 9.*
@@ -45,7 +41,7 @@ jobs:
         run: docker compose up -d
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update --dev
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
       - name: Execute tests
         run: vendor/bin/phpunit
