--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["rabbitmq", "message", "queue", "laravel", "job"],
     "type": "library",
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "illuminate/queue": "^11.0|^12.0",
         "php-amqplib/php-amqplib": "^3.6.0",
         "illuminate/support": "^11.0|^12.0",
@@ -12,8 +12,8 @@
     },
     "require-dev": {
         "ext-json": "*",
-        "phpunit/phpunit": "^9.6|^10.0.7",
-        "orchestra/testbench": "^v7.18.0",
+        "phpunit/phpunit": "^10.0|^11.0",
+        "orchestra/testbench": "^9.0|^10.0",
         "squizlabs/php_codesniffer": "^3",
         "mockery/mockery": "^1.7.0",
         "dg/bypass-finals": "dev-master",
@@ -44,7 +44,5 @@
         }
     ],
     "minimum-stability": "dev",
-    "suggest": {
-
-    }
+    "prefer-stable": true
 }
