--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,15 @@
     "require": {
         "php": "^8.2",
         "illuminate/queue": "^11.0|^12.0",
-        "php-amqplib/php-amqplib": "^3.6.0",
+        "php-amqplib/php-amqplib": "^v3.7.3",
         "illuminate/support": "^11.0|^12.0",
         "ext-pcntl": "*"
     },
     "require-dev": {
         "ext-json": "*",
-        "phpunit/phpunit": "^10.0|^11.0",
-        "orchestra/testbench": "^9.0|^10.0",
-        "squizlabs/php_codesniffer": "^3",
+        "phpunit/phpunit": "^10.0|^11.5.14",
+        "orchestra/testbench": "^9.0|^10.1",
+        "squizlabs/php_codesniffer": "^3.12",
         "mockery/mockery": "^1.7.0",
         "dg/bypass-finals": "dev-master",
         "rector/rector": "^0.15.25"
