--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -3,23 +3,54 @@ name: Code style
 on: [push, pull_request]
 
 permissions:
-  contents: read
+  contents: read # Allows checkout
 
 jobs:
   phpcs:
     name: PHPCS
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4 # Use latest major version
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
+          extensions: mbstring, xml # Add common extensions often needed by linters/tools
+          tools: composer:v2 # Optionally specify composer version
+        env:
+          COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Recommended for private repos or hitting rate limits
+
+      - name: Get Composer Cache Directory
+        id: composer-cache
+        run: |
+          echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache Composer dependencies
+        uses: actions/cache@v4 # Use latest major version
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
 
       - name: Install dependencies
-        run: composer update --prefer-dist --no-progress --no-suggest
+        run: composer install --prefer-dist --no-progress --no-interaction # Use install, add --no-interaction for CI
 
-      - name: Run script
-        run: vendor/bin/phpcs
+      # --- IMPORTANT ---
+      # Choose ONE of the following 'Run PHPCS' steps based on your project setup:
+
+      # Option 1: If you have a phpcs.xml or phpcs.xml.dist file in your root
+      - name: Run PHPCS (using config file)
+        run: vendor/bin/phpcs --standard=phpcs.xml.dist # Or phpcs.xml if that's your filename
+        # Optional: Specify paths explicitly if needed:
+        # run: vendor/bin/phpcs --standard=phpcs.xml.dist ./src ./tests
+
+      # Option 2: If you DON'T have a config file and want to use a standard (e.g., PSR12)
+      # - name: Run PHPCS (using PSR12 standard)
+      #   run: vendor/bin/phpcs --standard=PSR12 ./src ./tests # Adjust paths (./src ./tests) as needed!
+
+      # Option 3: Most basic run (relies heavily on defaults - least recommended)
+      # - name: Run PHPCS (basic)
+      #   run: vendor/bin/phpcs
