--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "require-dev": {
         "ext-json": "*",
-        "phpunit/phpunit": "^10.0|^11.5.14",
+        "phpunit/phpunit": "^10.0",
         "orchestra/testbench": "^9.0|^10.1",
         "squizlabs/php_codesniffer": "^3.12",
         "mockery/mockery": "^1.7.0",
