--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require-dev": {
         "ext-json": "*",
         "orchestra/testbench": "^8.0|^9.0|^10.0",
-        "phpunit/phpunit": "^9.5|^10.5|^11.5.3"
+        "phpunit/phpunit": "^9.5|^10.5|^11.5.3",
         "squizlabs/php_codesniffer": "^3.12",
         "mockery/mockery": "^1.7.0",
         "dg/bypass-finals": "dev-master",
