--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,10 +14,10 @@ jobs:
         include:
           - laravel: 11.*
             testbench: 9.*
-            phpunit: 9.*
+            phpunit: ^9.5
           - laravel: 12.*
             testbench: 10.*
-            phpunit: 10.*
+            phpunit: ^11.5.3
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
     steps:
       - name: Checkout code
