--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,33 +1,34 @@
-name: CI
+name: run-tests
 
 on:
   push:
-    branches: [ master, develop ]
+    branches: [main, master]
   pull_request:
-    branches: [ master, develop ]
+    branches: [main, master]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
+        os: [ubuntu-latest]
         php: [8.2, 8.3]
         laravel: [10.*, 11.*, 12.*]
-        dependency-version: [prefer-lowest, prefer-stable]
+        stability: [prefer-lowest, prefer-stable]
         include:
-          - laravel: 10.*
-            testbench: 8.*
+          - laravel: 12.*
+            testbench: 9.*
           - laravel: 11.*
             testbench: 9.*
-          - laravel: 12.*
-            testbench: 10.*
+          - laravel: 10.*
+            testbench: 8.*
 
-    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
+    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
     services:
       rabbitmq:
-        image: rabbitmq:3.12-management-alpine
+        image: rabbitmq:3.8-management-alpine
         env:
           RABBITMQ_DEFAULT_USER: guest
           RABBITMQ_DEFAULT_PASS: guest
@@ -41,135 +42,34 @@ jobs:
           --health-retries 5
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: ${{ matrix.php }}
-        extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
-        coverage: none
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
+          coverage: none
 
-    - name: Setup problem matchers
-      run: |
-        echo "::add-matcher::${{ runner.tool_cache }}/php.json"
-        echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
+      - name: Setup problem matchers
+        run: |
+          echo "::add-matcher::${{ runner.tool_cache }}/php.json"
+          echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
 
-    - name: Install dependencies
-      run: |
-        composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
-        composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
+      - name: Install dependencies
+        run: |
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
+          composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
-    - name: List Installed Dependencies
-      run: composer show -D
+      - name: List Installed Dependencies
+        run: composer show -D
 
-    - name: Wait for RabbitMQ
-      run: |
-        timeout 60s bash -c 'until nc -z localhost 5672; do sleep 1; done'
-        sleep 5
-
-    - name: Execute tests
-      run: vendor/bin/phpunit
-      env:
-        RABBITMQ_HOST: localhost
-        RABBITMQ_PORT: 5672
-        RABBITMQ_USER: guest
-        RABBITMQ_PASSWORD: guest
-        RABBITMQ_VHOST: /
-
-  code-style:
-    runs-on: ubuntu-latest
-    name: Code Style
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: 8.2
-        extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
-        coverage: none
-
-    - name: Install dependencies
-      run: composer install --no-interaction --prefer-dist
-
-    - name: Check code style
-      run: vendor/bin/pint --test
-
-  static-analysis:
-    runs-on: ubuntu-latest
-    name: Static Analysis
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: 8.2
-        extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
-        coverage: none
-
-    - name: Install dependencies
-      run: composer install --no-interaction --prefer-dist
-
-    - name: Run static analysis
-      run: vendor/bin/phpstan analyse --memory-limit=2G
-
-  coverage:
-    runs-on: ubuntu-latest
-    name: Coverage
-
-    services:
-      rabbitmq:
-        image: rabbitmq:3.12-management-alpine
+      - name: Execute tests
+        run: vendor/bin/phpunit
         env:
-          RABBITMQ_DEFAULT_USER: guest
-          RABBITMQ_DEFAULT_PASS: guest
-        ports:
-          - 5672:5672
-          - 15672:15672
-        options: >-
-          --health-cmd "rabbitmq-diagnostics -q ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: 8.2
-        extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
-        coverage: xdebug
-
-    - name: Install dependencies
-      run: composer install --no-interaction --prefer-dist
-
-    - name: Wait for RabbitMQ
-      run: |
-        timeout 60s bash -c 'until nc -z localhost 5672; do sleep 1; done'
-        sleep 5
-
-    - name: Run tests with coverage
-      run: vendor/bin/phpunit --coverage-clover=coverage.xml
-      env:
-        RABBITMQ_HOST: localhost
-        RABBITMQ_PORT: 5672
-        RABBITMQ_USER: guest
-        RABBITMQ_PASSWORD: guest
-        RABBITMQ_VHOST: /
-
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        files: ./coverage.xml
-        fail_ci_if_error: true
+          RABBITMQ_HOST: localhost
+          RABBITMQ_PORT: 5672
+          RABBITMQ_USER: guest
+          RABBITMQ_PASSWORD: guest
+          RABBITMQ_VHOST: /
